<?xml version="1.0"?>
<package>
  <name>pcd_writer</name>
  <version>0.0.0</version>
  <description>The pcd_writer package</description>
  <maintainer email="janani.mohan@vecna.com">janani.mohan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
